# DDOAutoGear

autogear/: all_effects.csv  all_items.pickle  pyproject.toml
autogear/ddoautogear/: all_items.py  deserializer.py  gear_slots.py  gearset.py  item.py  solver.py
autogear/tests/: tests.py
