[tool.poetry]
name = "ddoautogear"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-tqdm = "^4.66.0.20240106"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
